<resources>
    <string name="app_name">BookPack</string>
    <string name="supplier_phone">Supplier Phone</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="book_quantity">Book Quantity</string>
    <string name="book_price">Book Price</string>
    <string name="book_name">Book Name</string>
    <string name="add_book">Add Book</string>
    <string name="save">Save</string>
    <string name="delete_all_books">Delete All Books</string>
    <string name="add_some_books">Add some books.</string>
    <string name="bookshelf_is_empty">Bookshelf is empty !!</string>
    <string name="empty_view_img">empty view img</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this book?</string>
    <string name="delete_all_dialog_msg">Delete all books?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="book_requires_name">Book requires name</string>
    <string name="book_requires_valid_price">Book requires valid price</string>
    <string name="book_requires_valid_quantity">Book requires valid quantity</string>
    <string name="book_requires_valid_s_name">Book requires supplier name</string>
    <string name="book_requires_valid_s_phone">Book requires valid supplier phone</string>
    <string name="delete_not_supp">Deletion is not supported for</string>
    <string name="update_not_supp">Update is not supported for</string>
    <string name="insertion_not_supp">Insertion is not supported for</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="reduce_quantity_value">reduce quantity value</string>
    <string name="rate_of_change">rate</string>
    <string name="increase_quantity_value">increase quantity value</string>
    <string name="out_of_stock">Out Of Stock</string>
    <string name="price_sympol">$</string>
</resources>
